# pkg/corerp/api/v20231001preview/zz_generated_interfaces.go
@@ -46,7 +46,7 @@ type HealthProbePropertiesClassification interface {
 // RecipePropertiesClassification provides polymorphic access to related types.
 // Call the interface's GetRecipeProperties() method to access the common type.
 // Use a type switch to determine the concrete type.  The possible types are:
-// - *BicepRecipeProperties, *RecipeProperties, *TerraformRecipeProperties
+// - *BicepRecipeProperties, *PromiseRecipeProperties, *RecipeProperties, *TerraformRecipeProperties
 type RecipePropertiesClassification interface {
 	// GetRecipeProperties returns the RecipeProperties content of the underlying type.
 	GetRecipeProperties() *RecipeProperties
@@ -55,7 +55,7 @@ type RecipePropertiesClassification interface {
 // RecipePropertiesUpdateClassification provides polymorphic access to related types.
 // Call the interface's GetRecipePropertiesUpdate() method to access the common type.
 // Use a type switch to determine the concrete type.  The possible types are:
-// - *BicepRecipePropertiesUpdate, *RecipePropertiesUpdate, *TerraformRecipePropertiesUpdate
+// - *BicepRecipePropertiesUpdate, *PromiseRecipePropertiesUpdate, *RecipePropertiesUpdate, *TerraformRecipePropertiesUpdate
 type RecipePropertiesUpdateClassification interface {
 	// GetRecipePropertiesUpdate returns the RecipePropertiesUpdate content of the underlying type.
 	GetRecipePropertiesUpdate() *RecipePropertiesUpdate
