# pkg/corerp/api/v20231001preview/zz_generated_polymorphic_helpers.go
@@ -134,6 +134,8 @@ func unmarshalRecipePropertiesClassification(rawMsg json.RawMessage) (RecipeProp
 	switch m["templateKind"] {
 	case "bicep":
 		b = &BicepRecipeProperties{}
+	case "promise":
+		b = &PromiseRecipeProperties{}
 	case "terraform":
 		b = &TerraformRecipeProperties{}
 	default:
@@ -176,6 +178,8 @@ func unmarshalRecipePropertiesUpdateClassification(rawMsg json.RawMessage) (Reci
 	switch m["templateKind"] {
 	case "bicep":
 		b = &BicepRecipePropertiesUpdate{}
+	case "promise":
+		b = &PromiseRecipePropertiesUpdate{}
 	case "terraform":
 		b = &TerraformRecipePropertiesUpdate{}
 	default:
